Fixing issue with catalog

--- a/en/theme/material/base.html
+++ b/en/theme/material/base.html
@@ -143,6 +143,7 @@
           {% endif %}
         {% endif %}
       {% endblock %}
+      {% block main_block %}
       <main class="md-main" data-md-component="main">
         <div class="md-main__inner md-grid">
           {% block site_nav %}
@@ -189,6 +190,7 @@
           </a>
         {% endif %}
       </main>
+      {% endblock %}
       {% block footer %}
         {% include "partials/footer.html" %}
       {% endblock %}
