--- a/en/theme/material/main.html
+++ b/en/theme/material/main.html
@@ -2,3 +2,8 @@
 This file is the main template use in every page except the redoc and home page.
 -#}
 {% extends "base.html" %}
+
+<!-- wip banner -->
+{% block announce %}
+This documentation is a work in progress.
+{% endblock %}
