Update versions page

--- a/en/theme/material/base.html
+++ b/en/theme/material/base.html
@@ -136,13 +136,13 @@
     {% endblock %}
     <div class="md-container" data-md-component="container">
       {% block hero %}{% endblock %}
-      {% block tabs %}
-        {% if "navigation.tabs.sticky" not in features %}
-          {% if "navigation.tabs" in features %}
-            {% include "partials/tabs.html" %}
-          {% endif %}
-        {% endif %}
-      {% endblock %}
+<!--      {% block tabs %}-->
+<!--        {% if "navigation.tabs.sticky" not in features %}-->
+<!--          {% if "navigation.tabs" in features %}-->
+<!--            {% include "partials/tabs.html" %}-->
+<!--          {% endif %}-->
+<!--        {% endif %}-->
+<!--      {% endblock %}-->
       {% block main_block %}
       <main class="md-main" data-md-component="main">
         <div class="md-main__inner md-grid">
@@ -159,14 +159,14 @@
                 </div>
               </div>
             {% endif %}
-            {% if "toc.integrate" not in features %}
-              {% if page.meta and page.meta.hide %}
-                {% set hidden = "hidden" if "toc" in page.meta.hide %}
-              {% endif %}
+<!--            {% if "toc.integrate" not in features %}-->
+<!--              {% if page.meta and page.meta.hide %}-->
+<!--                {% set hidden = "hidden" if "toc" in page.meta.hide %}-->
+<!--              {% endif %}-->
               <div class="md-sidebar md-sidebar--secondary" data-md-component="sidebar" data-md-type="toc" {{ hidden }}>
                 <div class="md-sidebar__scrollwrap">
                   <div class="md-sidebar__inner">
-                    {% include "partials/toc.html" %}
+<!--                    {% include "partials/toc.html" %}-->
                   </div>
                 </div>
               </div>
