--- a/en/theme/material/main.html
+++ b/en/theme/material/main.html
@@ -3,7 +3,13 @@ This file is the main template use in every page except the redoc and home page.
 -#}
 {% extends "base.html" %}
 
-<!-- wip banner -->
-{% block announce %}
-This documentation is a work in progress.
+{% block analytics %}
+<!-- Google tag (gtag.js) --> 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EYFHTP2Z8Q"></script> 
+<script> 
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-EYFHTP2Z8Q');
+</script>
 {% endblock %}
